# msdk-adapter

./: Cargo.toml  README.md  build.rs  msdk.lib
src/: lib.rs
